ingress-transmission.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: mediaserver
  #annotations:
  #  kubernetes.io/ingress.class: "traefik-internal"
spec:
  ingressClassName: traefik-internal
  rules:
  - host: transmission.mediaserver.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  transmission
            port:
              number: 9091
